<resources>
    <string name="app_name">Martin Thorne\'s CV</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="speed_dial_email">Email</string>
    <string name="speed_dial_linkedin">LinkedIn</string>
    <string name="speed_dial_github">GitHub</string>
    <string name="settings_menu">Settings</string>
    <string name="settings_popup_increase_text_size">Increase text size</string>
    <string name="settings_popup_decrease_text_size">Decrease text size</string>
    <string name="complete_title">Complete CV</string>

    <string name="main_title">Home</string>
    <string name="main_text"><![CDATA[This app was created to show potential employees my abilities in coding Android applications.<br>
        It was created using <a href="https://developer.android.com/studio">Android Studio.</a> <br> <br>
        Navigate between sections by swiping left or right or using the navigation drawer.]]></string>

    <string name="about_me_title">About Me</string>
    <string name="about_me_text"><![CDATA[My previous job was quality auditor for Sanoh UK. I was made redundant at the end of March 2019. This was due to a reduction in orders, leading to less people being required to work the evening shift I was on. Since redundancy I have been studying to help improve my programming and other skills.<br>
        Whist working for Sanoh I studied computing and IT with the Open University. Achieving two certificates, a diploma and degree.<br>
        Since redundancy I have studied with Udacity and the Open University. In both cases using their free tiers. Udacity, whilst allowing anyone to do courses for free, do not provide certification. The Open University has a selection of free courses which, upon completion, are added to a ‘My achievement’ page.<br>
       One of the main reasons for studying, along with the sense of achievement and interest in the subject, was to change career and work in the areas of computing and IT. My main area of interest is Java programming. This is due to Java, plus learning about object orientated programming, being a major aspect of my study. Also the programming aspects were the most challenging, fulfilling and enjoyable parts of my study. During  OU study I programmed for the Android mobile operating system. I find mobile development very interesting and have continued to create apps.<br>]]></string>

    <string name="education_title">Education</string>
    <string name="education_text"><![CDATA[
         Year: 2001<br>
        Course: T171<br>
        Title: You, Your Computer And The Net<br>
        Level: 1<br>
        Points: 30<br>
        Result: Pass<br><br>
        Year: 2006<br>
        Course: M150<br>
        Title: Data, Computing And The Net<br>
        Level: 1<br>
        Points: 30<br>
        Result: Pass<br><br>
        Year: 2006<br>
        Course: M255<br>
        Title: Object-Orientated Programming With Java<br>
        Level: 2<br>
        Points: 30<br>
        Result: Grade 2<br><br>
        Year: 2007<br>
        Course: MT262<br>
        Title: Putting Computer Systems To Work<br>
        Level: 2<br>
        Points: 30<br>
        Result: Grade 2<br><br>
        Year: 2007<br>
        Course: MU120<br>
        Title: Open Mathematics<br>
        Level: 1<br>
        Points: 30<br>
        Result: Pass<br><br>
        Year: 2008<br>
        Course: M256<br>
        Title: Software Development With Java<br>
        Level: 2<br>
        Points: 30<br>
        Result: Grade 3<br><br>
        Year: 2008<br>
        Course: MT264<br>
        Title: Designing Applications With Visual Basic<br>
        Level: 2<br>
        Points: 30<br>
        Result: Grade 1<br><br>
        Year: 2009<br>
        Course: T224<br>
        Title: Computer And Processors<br>
        Level: 2<br>
        Points: 30<br>
        Result: Grade 2<br><br>
        Year: 2010<br>
        Course: T215<br>
        Title: Communication And Information Technologies<br>
        Level: 2<br>
        Points: 60<br>
        Result: Grade 2<br><br>
        Year: 2011<br>
        Course: M363<br>
        Title: Software Engineering With Object<br>
        Level: 3<br>
        Points: 30<br>
        Result: Grade 2<br><br>
        Year: 2011<br>
        Course: T324<br>
        Title: Keeping Ahead In Information And Communication Technologies<br>
        Level: 3<br>
        Points: 30<br>
        Result: Grade 2<br><br>
        Year: 2012<br>
        Course: M364<br>
        Title: Fundamentals Of Interaction Design<br>
        Level: 3<br>
        Points: 30<br>
        Result: Grade 2<br><br>
        Year: 2012<br>
        Course: TM470<br>
        Title: The Computing And IT Project<br>
        Level: 3<br>
        Points: 30<br>
        Result: Grade 2<br><br>

        <b>The Open University (2019)</b><br>
        I am working through a selection of free courses. A list of completed ones can be found <a href="https://www.open.edu/openlearn/profiles/mjt272/achievements">here.</a><br>
        <b>Udacity (2019)</b><br>
        I am working through <a href="https://eu.udacity.com/course/android-basics-nanodegree-by-google--nd803">‘Android Basics’</a> nanodegree courses.<br> ]]>
    </string>

    <string name="qualification_title">Qualifications</string>
    <string name="qualification_text"><![CDATA[<b>2012: Bachelor of Science (Honours) in Information Technology and Computing (2.1)</b><br>
        The degree recognizes up-to-date knowledge of important concepts and trends in information technology and computing and their context. Recipients will be able to apply there knowledge and understanding in practical situations, and will have a range of relevant professional and key skills.<br>
        <b>2009: Diploma in Computing</b><br>
        The diploma recognizes achievement in a coherent set of Open University undergraduate courses within the field of computing. It does this by encouraging students to study a selection of up-to-date courses in major computing topics of relevance to current practice.<br>
        <b>2008: Certificate in Computing and Mathematics</b><br>
        This award recognizes that the certificate holder will have gained basic skills in both mathematics and computing. In particular the holder of the certificate will have a good knowledge of basic mathematical concepts such as sequences, functions and algebra and knowledge of the main IT development activities such as programming and testing. Students who hold this certificate will have the skills which are necessary to continue their further studies in both mathematics and computing.<br>
        <b>2006: Certificate in Information Technology and Computing</b><br>
        Recipients of this certificate have an understanding of fundamental principles in computing, computer hardware and the Internet. They are able to evaluate critically developments in relevant technologies. They also have developed skills at level 1 in communication, information literacy, abstraction and group working.<br>]]>
    </string>

    <string name="computing_project_title">Computing Project</string>
    <string name="computing_project_text"><![CDATA[My final year of studying with the OU included the Computing And IT Project. The study area was largely left up to the student. I chose to write apps for the Android using Java.<br>
        The basic idea was to build two apps that would test the idea that personal navigation could be done via phones vibration function.<br>
        Programming these apps involved a lot of research into programming for Android. The second app also used Google maps.<br>
        As well as programming the final report also contained use cases, state machine diagram, activity diagram, code beautification and descriptions of how the code was created via prototyping (Scope/Design, Notes on the programming, Testing).<br>
        The final report can be found <a href="https://drive.google.com/file/d/1LXAl3YT4rAMCeP-iXE-Y3pCHz4RDogFc/view?usp=sharing">here.</a><br>
        Both apps are on <a href="https://github.com/Martin-Thorne/OU_Android_Naviagation_Project ">GitHub</a>. Also a readme file that goes into more detail on both apps.<br>]]>
    </string>

    <string name="employment_title">Employment</string>
    <string name="employment_text"><![CDATA[<b>Sanoh UK Manufacturing Ltd</b><br>
        Quality Auditor (August 2008 – March 2019)<br>
        Shop Floor Operator (June 1997 – August 2008)<br>
        Sanoh produces brake and fuel pipes for the automotive industry. As a quality auditor (and as part of the quality team) it was my job to ensure that the companies quality procedures were being maintained and carried out properly.<br>
        <b>Retainers Ltd</b><br>
        Supervisor (1986 – 1997)<br>]]>
    </string>

    <string name="android_apps_title">Android Apps</string>
    <string name="android_apps_text"><![CDATA[I have recently built two Android apps as a way for me to practice coding and mobile development. The apps can be downloaded from the Google play store with code maintained on GitHub.<br><br>
        <b>Martin Thorne’s CV:</b><br>
        This is a mobile version of my CV. It is broken down into sections that the user can get to by either, swiping between them, or using the navigation drawer. A settings popup menu allows the user to increase or decrease the text size. There is also a FAB button that, when tapped, brings up a speed dial with links to GitHub, LinkedIn and my email.<br>
        <a href="https://play.google.com/store/apps/details?id=com.martint.androidcv">Google Play</a>/<a href="https://github.com/Martin-Thorne/AndroidCV">GitHub</a><br><br>
        <b>Martin Thorne’s Earthquake App:</b><br>
        Uses Google maps to show recent earthquakes. The earthquake data is obtained via the United States Geological Survey website. The app parses the JSON data and add markers to the app. Tapping a marker will bring up further info on the earthquake via a window above the marker. When this is tapped the webpage for the earthquake is displayed via the users default browser.<br>
        <a href="https://play.google.com/store/apps/details?id=com.martint.earthquakeapp">Google Play</a>/<a href="https://github.com/Martin-Thorne/EarthquakeApp ">GitHub</a><br>]]>
    </string>

    <string name="interests_title">Interests</string>
    <string name="interests_text"><![CDATA[One of my main interests is in technology and gadgets. Keeping up to date with the world of technology is a passion.<br>
     I also enjoy dancing, specifically Le Roc (French jive). I have previously taught classes and still enjoy going to dances and classes.]]>
    </string>

    <string-array name="complete">
        <item>@string/about_me_title</item>
        <item>@string/about_me_text</item>
        <item>@string/education_title</item>
        <item>@string/education_text</item>
        <item>@string/qualification_title</item>
        <item>@string/qualification_text</item>
        <item>@string/computing_project_title</item>
        <item>@string/computing_project_text</item>
        <item>@string/employment_title</item>
        <item>@string/employment_text</item>
        <item>@string/android_apps_title</item>
        <item>@string/android_apps_text</item>
        <item>@string/interests_title</item>
        <item>@string/interests_text</item>
    </string-array>

</resources>
